--- a/my_fuzzy_strcmp/my_fuzzy_strcmp/my_fuzzy_strcmp.vcxproj
+++ b/my_fuzzy_strcmp/my_fuzzy_strcmp/my_fuzzy_strcmp.vcxproj
@@ -65,12 +65,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AutoFiller.cpp" />
     <ClCompile Include="Dictionaries.cpp" />
     <ClCompile Include="Fasade.cpp" />
     <ClCompile Include="language.cpp" />
     <ClCompile Include="languages.cpp" />
     <ClCompile Include="Lewinshtain_Word_Correcting.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="NumericTree.cpp" />
     <ClCompile Include="ReturnedData.cpp" />
     <ClCompile Include="Reader.cpp" />
     <ClCompile Include="SDictionary.cpp" />
@@ -80,12 +82,11 @@
     <ClCompile Include="Translate.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AutoCorecter.h" />
+    <ClInclude Include="AutoFiller.h" />
     <ClInclude Include="dictionaries.h" />
-    <ClInclude Include="Fuzzy_Strcmp.h" />
-    <ClInclude Include="Fasade.h" />
     <ClInclude Include="Langruages.h" />
     <ClInclude Include="Language.h" />
+    <ClInclude Include="NumericTree.h" />
     <ClInclude Include="Parser.h" />
     <ClInclude Include="returnedData.h" />
     <ClInclude Include="Reader.h" />
