--- a/my_fuzzy_strcmp/my_fuzzy_strcmp/my_fuzzy_strcmp.vcxproj.filters
+++ b/my_fuzzy_strcmp/my_fuzzy_strcmp/my_fuzzy_strcmp.vcxproj.filters
@@ -54,6 +54,12 @@
     <ClCompile Include="Translate.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AutoFiller.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="NumericTree.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SDictionary.h">
@@ -77,12 +83,6 @@
     <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Fuzzy_Strcmp.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Fasade.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Language.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -92,13 +92,16 @@
     <ClInclude Include="Translator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="AutoCorecter.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="returnedData.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SeacherForWords.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AutoFiller.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="NumericTree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
