--- a/my_fuzzy_strcmp/my_fuzzy_strcmp/my_fuzzy_strcmp.vcxproj
+++ b/my_fuzzy_strcmp/my_fuzzy_strcmp/my_fuzzy_strcmp.vcxproj
@@ -67,35 +67,39 @@
   <ItemGroup>
     <ClCompile Include="AutoFiller.cpp" />
     <ClCompile Include="Dictionaries.cpp" />
-    <ClCompile Include="Fasade.cpp" />
+    <ClCompile Include="DictionaryPairLang.cpp" />
+    <ClCompile Include="FiledataValidator.cpp" />
     <ClCompile Include="language.cpp" />
     <ClCompile Include="languages.cpp" />
-    <ClCompile Include="Lewinshtain_Word_Correcting.cpp" />
+    <ClCompile Include="LewinshtainWordCorrecting.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="NumericTree.cpp" />
     <ClCompile Include="ReturnedData.cpp" />
     <ClCompile Include="Reader.cpp" />
-    <ClCompile Include="SDictionary.cpp" />
-    <ClCompile Include="sDictionaryParser.cpp" />
+    <ClCompile Include="Dictionary.cpp" />
+    <ClCompile Include="DictionaryParser.cpp" />
     <ClCompile Include="SeacherForWords.cpp" />
     <ClCompile Include="stingWrapper.cpp" />
     <ClCompile Include="Translate.cpp" />
+    <ClCompile Include="WordsWithPriorityCollection.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AutoFiller.h" />
     <ClInclude Include="dictionaries.h" />
-    <ClInclude Include="Langruages.h" />
+    <ClInclude Include="DictionaryPairLangugae.h" />
+    <ClInclude Include="FiledataValidator.h" />
+    <ClInclude Include="IntrafaceControler.h" />
     <ClInclude Include="Language.h" />
-    <ClInclude Include="NumericTree.h" />
+    <ClInclude Include="Languages.h" />
     <ClInclude Include="Parser.h" />
     <ClInclude Include="returnedData.h" />
     <ClInclude Include="Reader.h" />
-    <ClInclude Include="SDictionary.h" />
+    <ClInclude Include="Dictionary.h" />
     <ClInclude Include="SeacherForWords.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="stringWrapper.h" />
     <ClInclude Include="Translator.h" />
-    <ClInclude Include="Word_Correcter.h" />
+    <ClInclude Include="WordCorrecter.h" />
+    <ClInclude Include="WordsWithPriorityCollection.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
